Add navbar in signup page

--- a/views/layouts/signup.hbs
+++ b/views/layouts/signup.hbs
@@ -1,89 +1,81 @@
- 
-
-
+ <nav>
+    <div id="logo">
+        <span id="logoIcon"></span>
+        <span id="logoName">Mosina</span>
+    </div>
+ </nav>
 <div>
     <h2>Sign up</h2>
     <form action="/authors/login" method="post">
-    <div class="firsname">  
+        <div class="firsname">  
         <div>
             <label for="firstname">First Name:</label>
             <div>
                 <input type="text" value="firstname" >
             </div>
         </div>
-    </div>
-    
-    <div class="secondName">
+        </div>
+        <div class="secondName">
         <div>
             <label for="secondName">Second Name:</label>
             <div>
                 <input type="text"  value="secondName">
             </div>
         </div>
-    </div>
-    <div class="secondName">
+        </div>
+        <div class="email">
         <div>
-            <label for="secondName">Email :</label>
+            <label for="Email">Email :</label>
             <div>
                 <input type="email"  value="secondName">
             </div>
         </div>
-    </div>
-    <div class="secondName">
+        </div>
+        <div class="contact">
         <div>
-            <label for="secondName">Contact :</label>
+            <label for="Contact">Contact :</label>
             <div>
                 <input type="number"  value="secondName">
             </div>
         </div>
-    </div>
-    <div class="secondName">
+        </div>
+        <div class="password">
         <div>
-            <label for="secondName">Password :</label>
+            <label for="Password">Password :</label>
             <div>
                 <input type="password"  value="secondName">
             </div>
         </div>
-    </div>
-    <div class="secondName">
+        </div>
+        <div class="profilePicture">
         <div>
-            <label for="secondName">Profile Picture:</label>
+            <label for="profilePicture">Profile Picture:</label>
             <div>
                 <input type="file"  value="secondName">
             </div>
         </div>
-    </div>
-    <div class="secondName">
+        </div>
+        <div class="field">
         <div>
-            <label for="secondName">Field :</label>
+            <label for="Field">Field :</label>
             <div>
                 <textarea name="content" id="" cols="30" rows="10"></textarea>
             </div>
         </div>
-    </div>
-    <div class="secondName">
+        </div>
+        <div class="about">
         <div>
-            <label for="secondName">About :</label>
+            <label for="About">About :</label>
             <div>
                 <textarea name="content" id="" cols="30" rows="10"></textarea>
             </div>
         </div>
-    </div>
-
-
-<!--    <div class="content">-->
-<!--        <div>-->
-<!--            <label for="email">Email :</label>-->
-<!--            <div>-->
-<!--                <textarea name="content" id="" cols="30" rows="10"></textarea>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-    
-    <div>
-        <button type="submit">Sign up</button>
-    </div>
+        </div>
+        <div>
+            <button type="submit">Sign up</button>
+        </div>
     </form>
+    <p>Already have an account? <a href="http://localhost:3000/login/">Login</a></p>
 </div>
 
 <script>
